--- a/webApp/TransflowerWebApp/Views/Shared/_Layout.cshtml
+++ b/webApp/TransflowerWebApp/Views/Shared/_Layout.cshtml
@@ -20,16 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Insert">Insert</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Books">Books</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Update">Update</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Books">AboutUs</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Details">Details</a>
                         </li>
                     </ul>
                 </div>
