--- a/SessionMvc/Views/Home/Privacy.cshtml
+++ b/SessionMvc/Views/Home/Privacy.cshtml
@@ -1,6 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
+﻿@using SessionMvc.Models;
+@{
+    ViewData["Title"] = "session Policy";
 }
 <h1>@ViewData["Title"]</h1>
+<p>Use this page to show Session data.</p>
+<p>Product = @ViewBag.data</p>
+<p>Age = @ViewBag.age</p>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<hr/>
+
+
