--- a/MvcApp/Views/Project/GetProjects.cshtml
+++ b/MvcApp/Views/Project/GetProjects.cshtml
@@ -2,49 +2,7 @@
 @{
     ViewData["Title"] = "Show Page";
 }
- @* <html>
-<head>
-
-<link rel="stylesheet" href="~/css/table.css" type="text/css" />
-</head>
-<body >
-
-<div class="text-center">
-    <h1 class="display-4"> Project By Id</h1>
-    <div style="text-align:left; margin: 8px;">
-   <button ><a  href="Search"> search<a/></button>
-   </div> 
-    @{
-         
-          <table>
-         <tr>
-         <th>Id</th>
-         <th>ProjectName</th>
-         <th>StartDate</th>
-         <th>EndDate</th>
-         <th>Description</th>
-         <th>Status</th> 
-         <th>Details</th>
-          </tr>
-             
-                @foreach(var project in ViewData["projects"] as List<Project>) 
-             {
-            <tr>
-            <td>@project.Id</td>
-            <td>@project.Title</td>
-            <td>@project.StartDate</td>
-            <td>@project.EndDate</td>
-            <td>@project.Description</td>
-            <td>@project.Status</td> 
-            </tr>} 
-         }
-         </table>
-         
-    }
-    
-</div>
-</body>
-</html> *@
+ 
 
 
 
@@ -83,14 +41,14 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var project in ViewData["projects"] as List<Project>)
+         @foreach (var project in Model)
             {
                 <tr>
                     <td>@project.Id</td>
                     <td>@project.Title</td>
                     <td>@project.Description</td>
                 </tr>
-            }
+            } 
         </tbody>
     </table>
 </body>
